2010-07-15  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-E120n.xml: Set recommended driver to
	  "Postscript" and added also PCL-5e drivers as possible
	  drivers (Ubuntu bug #548747).

	* printer/Lexmark-E120.xml: Added "hpijs-pcl5e" to the printer's
	  driver list.

2010-07-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_1220.xml,
	  printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml,
	  printer/HP-LaserJet_3390.xml, printer/HP-LaserJet_3392.xml:
	  Recommend the "pxlmono" driver instead of HPLIP PostScript, these
	  printers do not have enough memory for high-resolution PostScript
	  printing.

2010-07-10  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Kodak-ESP_3250.xml:
	  New entries added to the MySQL database.

2010-07-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-OfficeJet_4300.xml: printer/Samsung-CLP-300.xml,
	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml,
	  printer/Samsung-CLP-610ND.xml, printer/Xerox-Phaser_6110.xml:
	  Restored printer entries which got lost due to a web server bug.

2010-07-06  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/epson-escpr.xml:
	  Entries modified in the MySQL database.

	* db/source/printer/Samsung-CLP-300.xml,
	  db/source/printer/Samsung-CLP-310.xml,
	  db/source/printer/Samsung-CLP-315.xml,
	  db/source/printer/Samsung-CLP-610ND.xml,
	  db/source/printer/Xerox-Phaser_6110.xml:
	  Entries removed from the MySQL database.

2010-07-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented new "fingerprint" parameter for the <package>
	  tag. It provides a link to key fingerprint on the web site of the
	  issuer of the driver.

	* xmlschema/driver.xsd: Updated for new "fingerprint" attribute of the
	  <package> tag.

2010-06-24  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-OfficeJet_4300.xml: