@@ -26,12 +26,6 @@
   <driver>Postscript</driver>
   <drivers>
     <driver>
-      <id>Postscript</id>
-    </driver>
-    <driver>
-      <id>pxlmono</id>
-    </driver>
-    <driver>
       <id>hpijs-pcl5e</id>
     </driver>
     <driver>
@@ -42,6 +36,12 @@
     </driver>
     <driver>
       <id>ljet4d</id>
+    </driver>
+    <driver>
+      <id>Postscript</id>
+    </driver>
+    <driver>
+      <id>pxlmono</id>
     </driver>
   </drivers>
   <comments>
