@@ -1,3 +1,8 @@
+2010-07-16  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Lexmark-E120n.xml:
+	  Entries modified in the MySQL database.
+
 2010-07-15  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Lexmark-E120n.xml: Set recommended driver to
